🐳 chore: Remove picocli